# rocm_wmma_samples

./: CMakeLists.txt  main.cpp  readme.md
common/: hip_utils.hpp  matrix.hpp
hgemm/: CMakeLists.txt  bench.cpp  hgemm.hpp  main.cpp  readme.md  test.cpp
hgemm/docs/: general.md  llm_focus.md
hgemm/include/: hgemm.hpp
hgemm/include/kernels/: common.hpp  rocblas.hpp  rocwmma.hpp  shared.hpp  wmma.hpp  wmma_decoupled.hpp  wmma_opt_1.hpp  wmma_opt_2.hpp  wmma_opt_3.hpp  wmma_prefetch.hpp  wmma_shared.hpp  wmma_shared_warp.hpp  wmma_shared_warp_buf.hpp  wmma_shared_warp_buf_vec.hpp  wmma_shared_warp_vec.hpp
hgemm/kernels/: common.hpp  rocblas.hpp  rocwmma.hpp  shared.hpp  wmma.hpp  wmma_prefetch.hpp  wmma_shared.hpp  wmma_shared_warp.hpp  wmma_shared_warp_buf.hpp  wmma_shared_warp_buf_vec.hpp  wmma_shared_warp_vec.hpp
hgemm/src/: wmma_opt_2.cpp  wmma_opt_3.cpp  wmma_opt_4.cpp  wmma_shared_warp_buf.cpp
